added a test file and made generalised return dictionary for all plugins and changed utils file accordingly

--- a/sample_config/config.yaml
+++ b/sample_config/config.yaml
@@ -1,6 +1,24 @@
 profiles:
-  isa: RV64IMFDCZicsr
+  cfg:
+    isa: RV32I
+    log: ./tests/casamp.log
+    metrics:
+      # - instr_groups
+      # - branch_ops
+      # - cache
+      # - dependency
+      # - jumps_ops
+      # - register_compute
+      # - csr_compute
+      # - store_load_bypass
+      - pattern
+    commitlog_regex : '^instretire:\s+(\d+)\s+([a-fA-F0-9]+)\s+([a-fA-F0-9]+)'
+    disass_regex : "^\\s*([0-9a-f]+):\\s+([0-9a-f]+)\\s+([a-z][a-z\\.0-9]*)"
+    privilege_mode_regex : '^core\\s+\\d+:\\s+(\\d+)'
+    output : ./build
+    verbose: info
   cfg1:
+    isa: RV64IMFDCZicsr
     log: ./tests/hello.log
     metrics:
       - instr_groups
@@ -12,8 +30,8 @@ profiles:
       - csr_compute
       - store_load_bypass
       - pattern
-    commitlog_regex : "^core\\s+\\d+:\\s+(\\d*)\\s+(0x[0-9a-fA-F]+)\\s+\\((0x[0-9a-fA-F]+)\\)\\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\\s*(0x[0-9a-fA-F]*)?\\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\\s*(0x[0-9a-fA-F]*)?\\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\\s*(0x[0-9a-fA-F]*)?"
+    commitlog_regex : '^core\s+\d+:\s+(\d*)\s+(0x[0-9a-fA-F]+)\s+\((0x[0-9a-fA-F]+)\)\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\s*(0x[0-9a-fA-F]*)?\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\s*(0x[0-9a-fA-F]*)?\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\s*(0x[0-9a-fA-F]*)?'
     disass_regex : "^\\s*([0-9a-f]+):\\s+([0-9a-f]+)\\s+([a-z][a-z\\.0-9]*)"
-    privilege_mode_regex : '^core\\s+\\d+:\\s+(\\d+)'
+    privilege_mode_regex : '^core\s+\d+:\s+(\d+)'
     output : ./build
     verbose: info
