fixed store load bypass accuratly and changed stackpointer values

--- a/sample_config/config.yaml
+++ b/sample_config/config.yaml
@@ -13,3 +13,5 @@ profiles:
       - pattern
     commitlog_regex : '^core\s+\d+:\s+(\d*)\s+(0x[0-9a-fA-F]+)\s+\((0x[0-9a-fA-F]+)\)\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\s*(0x[0-9a-fA-F]*)?\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\s*(0x[0-9a-fA-F]*)?\s*(x[0-9]*)?(c[0-9]+[_a-z]*)?(mem)?\s*(0x[0-9a-fA-F]*)?'
     privilege_mode_regex : '^core\s+\d+:\s+(\d+)'
+    uarch:
+      bypass_depth: 2
