optimised the instruction list by using dictionary for faster computation

--- a/sample_config/config1.yaml
+++ b/sample_config/config1.yaml
@@ -2,8 +2,24 @@ profiles:
   cfg:
     isa: RV32I
     metrics:
-      - instr_groups
-      - branch_ops
+      # - instr_groups
+      - branch_ops:
+        offsets:
+          inputs:
+            - inst_list
+            - threshold
+          outputs:
+            - 
+            -
+        sign:
+          inputs:
+            - inst_list
+            - threshold
+          outputs:
+            - 
+            -
+      - cache:
+
       - cache
       - dependency
       - jumps_ops
