--- a/cycle_accurate_config/ca_config.yaml
+++ b/cycle_accurate_config/ca_config.yaml
@@ -49,3 +49,18 @@ cycles:
     data_cache: 1
     bus: 8 # bus capacity in terms of words
   # replacemnt_latency: 257
+  mem_latency:
+    cacheable:
+      data:
+        hit: 2
+        miss: 2 
+      instruction:
+        hit: 2
+        miss: 2  
+        hit: 2
+        miss: 16 #bus_latency + (size of cache line in bytes /4) 
+    non_cacheable:
+      data:
+        miss: 8 #bus_latency 
+      instruction:
+        miss: 9 #bus_latency 
