--- a/sample_config/config1.yaml
+++ b/sample_config/config1.yaml
@@ -31,7 +31,10 @@ profiles:
           - Data cache utilization.
         instruction_cache_simulator:
           - Instruction cache utilization.
-      # cache_exp: # mandatory
+      # cache_ca1:
+      #   cache_simulator:
+      #     - Cache utilization.
+      # cache_l2: # mandatory
       #   cache_simulator:
       #     - Cache utilization.
       store_load_bypass:
@@ -56,6 +59,17 @@ profiles:
       write_allocate : True # false for write no allocate
       structural_latency: 7 #number of words - 1
     instr_cache:
+      range:
+        start: 0x80000000
+        end: 0x8fffffff
+      no_of_sets : 32
+      no_of_ways : 2
+      line_size : 32
+      replacement_policy: "LFSR"
+      write_back : True # false for write through
+      write_allocate : True # false for write no allocate
+      structural_latency: 7 #number of words - 1
+    l2_cache:
       range:
         start: 0x80000000
         end: 0x8fffffff
