--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,7 @@ version: 2
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
-  configuration: source/conf.py
+  configuration: /riscv-application-profiler/source/conf.py
   # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
   # builder: "dirhtml"
   # Fail on all warnings to avoid broken references
