--- a/sample_configs/cycle_accurate/L2_configs/config.yaml
+++ b/sample_configs/cycle_accurate/L2_configs/config.yaml
@@ -1,4 +1,4 @@
-
+# YAML with l2 cache congifuration
 cycles:
   # start_cycles: 100
   instructions_cycles:
@@ -51,12 +51,16 @@ cycles:
     cacheable:
       data:
         hit: 1
-        miss: 8 
+        miss: 1 
       instruction:
         hit: 1
-        miss: 8
+        miss: 1 
+      L2:
+        hit: 1
+        miss: 16 #bus_latency + (size of cache line in bytes /4) eg: 8 + (32/4) = 16
     non_cacheable:
       data:
         miss: 8 #bus_latency 
       instruction:
         miss: 9 #bus_latency 
+
